[tool.poetry]
name = "onlinecodingapp"
version = "0.1.0"
description = ""
authors = ["PasternakShahar <131560123+PasternakShahar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
